--- a/templates/booking.html
+++ b/templates/booking.html
@@ -14,39 +14,42 @@
                 <div class="col-xl-7 col-lg-8">
                     <div class="py-15 px-20 rounded-4 text-15 bg-blue-1-05">
                         <h2 class="text-22 fw-500 mt-40 md:mt-24">Let us know who you are</h2>
-                        <div class="row x-gap-20 y-gap-20 pt-20">
-                            <div class="col-12">
-                                <div class="form-input ">
-                                    <input type="text" required>
-                                    <label class="lh-1 text-16 text-light-1">Full Name</label>
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="row x-gap-20 y-gap-20 pt-20">
+                                <div class="col-12">
+                                    <div class="form-input ">
+                                        <input type="text" required>
+                                        <label class="lh-1 text-16 text-light-1">Full Name</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-input ">
+                                        <input type="text" required>
+                                        <label class="lh-1 text-16 text-light-1">Email</label>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-input ">
+                                        <input type="text" required>
+                                        <label class="lh-1 text-16 text-light-1">Phone Number</label>
+                                    </div>
+                                </div>
+                                <div class="col-12">
+                                    <div class="form-input ">
+                                        <textarea required rows="6"></textarea>
+                                        <label class="lh-1 text-16 text-light-1">Special Requests</label>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-input ">
-                                    <input type="text" required>
-                                    <label class="lh-1 text-16 text-light-1">Email</label>
+                            <div class="row y-gap-20 items-center justify-between">
+                                <div class="col-auto">
+                                    <a href="#" class="button h-60 px-24 -dark-1 bg-blue-1 text-white">
+                                        Book Now <div class="icon-arrow-top-right ml-15"></div>
+                                    </a>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="form-input ">
-                                    <input type="text" required>
-                                    <label class="lh-1 text-16 text-light-1">Phone Number</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-input ">
-                                    <textarea required rows="6"></textarea>
-                                    <label class="lh-1 text-16 text-light-1">Special Requests</label>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row y-gap-20 items-center justify-between">
-                            <div class="col-auto">
-                                <a href="#" class="button h-60 px-24 -dark-1 bg-blue-1 text-white">
-                                    Book Now <div class="icon-arrow-top-right ml-15"></div>
-                                </a>
-                            </div>
-                        </div>
+                        </form>
                         <div class="w-full h-1 bg-border mt-40 mb-40"></div>
                     </div>
                 </div>
@@ -94,22 +97,22 @@
                             <div class="row y-gap-20 justify-between">
                                 <div class="col-auto">
                                     <div class="text-15">Check-in</div>
-                                    <div class="fw-500">Thu 21 Apr 2022</div>
-                                    <div class="text-15 text-light-1">15:00 – 23:00</div>
+                                    <div class="fw-500">{{ check_in_date|date:"D d M Y" }}</div>
+                                    {% comment %} <div class="text-15 text-light-1">15:00 – 23:00</div> {% endcomment %}
                                 </div>
                                 <div class="col-auto md:d-none">
                                     <div class="h-full w-1 bg-border"></div>
                                 </div>
                                 <div class="col-auto text-right md:text-left">
                                     <div class="text-15">Check-out</div>
-                                    <div class="fw-500">Sat 30 Apr 2022</div>
-                                    <div class="text-15 text-light-1">01:00 – 11:00</div>
+                                    <div class="fw-500">{{ check_out_date|date:"D d M Y" }}</div>
+                                    {% comment %} <div class="text-15 text-light-1">01:00 – 11:00</div> {% endcomment %}
                                 </div>
                             </div>
                             <div class="border-top-light mt-30 mb-20"></div>
                             <div class="">
                                 <div class="text-15">Total length of stay:</div>
-                                <div class="fw-500">9 days</div>
+                                <div class="fw-500">{{ total_length_of_stay }} days</div>
                             </div>
                         </div>
                         <div class="px-30 py-30 border-light rounded-4 mt-30">
