--- a/templates/booking.html
+++ b/templates/booking.html
@@ -18,25 +18,25 @@
                             {% csrf_token %}
                             <div class="row x-gap-20 y-gap-20 pt-20">
                                 <div class="col-12">
-                                    <div class="form-input ">
+                                    <div class="form-input">
                                         {{ form.name }}
                                         <label class="lh-1 text-16 text-light-1">Full Name</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-input ">
+                                    <div class="form-input">
                                         {{ form.email }}
                                         <label class="lh-1 text-16 text-light-1">Email</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="form-input ">
+                                    <div class="form-input">
                                         {{ form.phone }}
                                         <label class="lh-1 text-16 text-light-1">Phone Number</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
-                                    <div class="form-input ">
+                                    <div class="form-input">
                                         {{ form.special_request }}
                                         <label class="lh-1 text-16 text-light-1">Special Requests</label>
                                     </div>
@@ -44,7 +44,7 @@
                             </div>
                             <div class="row y-gap-20 items-center justify-between">
                                 <div class="col-auto">
-                                    <button class="button h-60 px-24 -dark-1 bg-blue-1 text-white">
+                                    <button type="submit" class="button h-60 px-24 -dark-1 bg-blue-1 text-white">
                                         Continue to Checkout <div class="icon-arrow-top-right ml-15"></div>
                                     </button>
                                 </div>
@@ -152,20 +152,22 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="px-30 py-30 border-light rounded-4 mt-30">
-                            <div class="text-20 fw-500 mb-20">Your payment schedule</div>
-                            <div class="row y-gap-5 justify-between">
-                                <div class="col-auto">
-                                    <div class="text-15">Before you stay you'll pay</div>
+                        {% if form.name.value and form.email.value and form.phone.value %}
+                            <div class="px-30 py-30 border-light rounded-4 mt-30">
+                                <div class="text-20 fw-500 mb-20">Your payment schedule</div>
+                                <div class="row y-gap-5 justify-between">
+                                    <div class="col-auto">
+                                        <div class="text-15">Before you stay you'll pay</div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <div class="text-15">${{ room.price|intcomma }}</div>
+                                    </div>
                                 </div>
-                                <div class="col-auto">
-                                    <div class="text-15">${{ room.price|intcomma }}</div>
-                                </div>
+                                <button class="button h-60 px-24 -dark-1 bg-blue-1 text-white">
+                                    Pay Now <div class="icon-arrow-top-right ml-15"></div>
+                                </button>
                             </div>
-                            <button class="button h-60 px-24 -dark-1 bg-blue-1 text-white">
-                                Pay Now <div class="icon-arrow-top-right ml-15"></div>
-                            </button>
-                        </div>
+                        {% endif %}
                     </div>
                 </div>
             </div>
