--- a/templates/booking.html
+++ b/templates/booking.html
@@ -14,6 +14,11 @@
                 <div class="col-xl-7 col-lg-8">
                     <div class="py-15 px-20 rounded-4 text-15 bg-blue-1-05">
                         <h2 class="text-22 fw-500 mt-40 md:mt-24">Let us know who you are</h2>
+                        {% if success %}
+                            <div class="alert alert-success">
+                                Your booking was successful! Please proceed to payment below.
+                            </div>
+                        {% endif %}
                         <form method="post">
                             {% csrf_token %}
                             <div class="row x-gap-20 y-gap-20 pt-20">
