--- a/templates/success.html
+++ b/templates/success.html
@@ -11,7 +11,8 @@
     <section class="pt-40 layout-pb-md">
         <div class="container">
             <div class="row">
-                <div class="col-xl-7 col-lg-8">
+                <div class="col-xl-2 col-lg-2"></div>
+                <div class="col-xl-8 col-lg-8">
                     <div class="row x-gap-20 y-gap-20 pt-20">
                         <div class="d-flex flex-column items-center mt-60 lg:md-40 sm:mt-24">
                             <div class="size-80 flex-center rounded-full bg-dark-3">
