About us page setup

--- a/templates/success.html
+++ b/templates/success.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/app.html' %}
 {% load static %}
 {% load humanize %}
-{% block title %} {{ Booking }} {% endblock %}
+{% block title %} Booking Success {% endblock %}
 {% block content %}
 
     <br>
