--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -26,7 +26,7 @@
                                         <a href="{% url 'base:home' %}">Home</a>
                                     </li>
                                     <li>
-                                        <a href="{% url 'base:home' %}">About Us</a>
+                                        <a href="{% url 'base:about' %}">About Us</a>
                                     </li>
                                     <li>
                                         <a href="{% url 'base:rooms' %}">Rooms</a>
