--- a/templates/index.html
+++ b/templates/index.html
@@ -149,7 +149,7 @@
                     <h2 class="text-30 fw-600">B&B a best place to spend you vacation</h2>
                     <p class="text-dark-1 mt-40 lg:mt-20 sm:mt-15">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                     <div class="d-inline-block mt-40 lg:mt-30 sm:mt-20">
-                        <a href="#" class="button -md -blue-1 bg-yellow-1 text-dark-1">
+                        <a href="{% url 'base:about' %}" class="button -md -blue-1 bg-yellow-1 text-dark-1">
                             Learn More <div class="icon-arrow-top-right ml-15"></div>
                         </a>
                     </div>
