--- a/templates/about.html
+++ b/templates/about.html
@@ -4,4 +4,19 @@
 {% block title %} About Us {% endblock %}
 {% block content %}
 
+    <section class="section-bg layout-pt-lg layout-pb-lg">
+        <div class="section-bg__item col-12">
+            <img src="img/pages/about/1.png" alt="image">
+        </div>
+
+        <div class="container">
+            <div class="row justify-center text-center">
+                <div class="col-xl-6 col-lg-8 col-md-10">
+                    <h1 class="text-40 md:text-25 fw-600 text-white">Looking for joy?</h1>
+                    <div class="text-white mt-15">Your trusted trip companion</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 {% endblock %}
