--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -50,7 +50,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <h5 class="text-16 fw-500 mb-30">Company</h5>
                                 <div class="d-flex y-gap-5 flex-column">
-                                <a href="#">About Us</a>
+                                <a href="{% url 'base:about' %}">About Us</a>
                                 <a href="#">Blog</a>
                             </div>
                         </div>
