--- a/templates/about.html
+++ b/templates/about.html
@@ -96,15 +96,17 @@
             </div>
             <div class="overflow-hidden pt-40 js-section-slider" data-gap="30" data-slider-cols="xl-5 lg-4 md-2 sm-2 base-1" data-nav-prev="js-team-prev" data-pagination="js-team-pag" data-nav-next="js-team-next">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="">
-                            <img src="img/team/1.png" alt="image" class="rounded-4 col-12">
-                            <div class="mt-10">
-                                <div class="text-18 lh-15 fw-500">Cody Fisher</div>
-                                <div class="text-14 lh-15">Medical Assistant</div>
+                    {% for person in team %}
+                        <div class="swiper-slide">
+                            <div class="">
+                                <img src="{{ person.image.url }}" alt="image" class="rounded-4 col-12" style="">
+                                <div class="mt-10">
+                                    <div class="text-18 lh-15 fw-500">{{ person.name }}</div>
+                                    <div class="text-14 lh-15">{{ person.position }}</div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
