--- a/templates/about.html
+++ b/templates/about.html
@@ -125,41 +125,42 @@
             </div>
             <div class="overflow-hidden pt-80 js-section-slider" data-gap="30" data-slider-cols="xl-3 lg-3 md-2 sm-1 base-1">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <div class="testimonials -type-1 bg-white rounded-4 pt-40 pb-30 px-40">
-                            <h4 class="text-16 fw-500 text-blue-1 mb-20">Hotel Equatorial Melaka</h4>
-                            <p class="testimonials__text lh-18 fw-500 text-dark-1">&quot;Our family was traveling via bullet train between cities in Japan with our luggage - the location for this hotel made that so easy. Agoda price was fantastic.&quot;</p>
-                            <div class="pt-20 mt-28 border-top-light">
-                                <div class="row x-gap-20 y-gap-20 items-center">
-                                    <div class="col-auto">
-                                        <img class="size-60" src="img/avatars/1.png" alt="image">
-                                    </div>
-                                    <div class="col-auto">
-                                        <div class="text-15 fw-500 lh-14">Courtney Henry</div>
-                                        <div class="text-14 lh-14 text-light-1 mt-5">Web Designer</div>
+                    {% for testimony in testimonies %}
+                        <div class="swiper-slide">
+                            <div class="testimonials -type-1 bg-white rounded-4 pt-40 pb-30 px-40">
+                                <p class="testimonials__text lh-18 fw-500 text-dark-1">
+                                    &quot;{{ testimony.message }}&quot;
+                                </p>
+                                <div class="pt-20 mt-28 border-top-light">
+                                    <div class="row x-gap-20 y-gap-20 items-center">
+                                        <div class="col-auto">
+                                            <img class="size-60" src="{{ testimony.image.url }}" alt="image">
+                                        </div>
+                                        <div class="col-auto">
+                                            <div class="text-15 fw-500 lh-14">{{ testimony.name }}</div>
+                                            <div class="text-14 lh-14 text-light-1 mt-5">{{ testimony.position }}</div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
             <div class="row y-gap-30 items-center pt-40 sm:pt-20">
                 <div class="col-xl-4">
                     <div class="row y-gap-30 text-dark-1">
                         <div class="col-sm-5 col-6">
-                            <div class="text-30 lh-15 fw-600">13m+</div>
+                            <div class="text-30 lh-15 fw-600">{{ happy_people_count }}+</div>
                             <div class="lh-15">Happy People</div>
                         </div>
                         <div class="col-sm-5 col-6">
-                            <div class="text-30 lh-15 fw-600">4.88</div>
+                            <div class="text-30 lh-15 fw-600">{{ average_rating }}</div>
                             <div class="lh-15">Overall rating</div>
                             <div class="d-flex x-gap-5 items-center pt-10">
-                                <div class="icon-star text-dark-1 text-10"></div>
-                                <div class="icon-star text-dark-1 text-10"></div>
-                                <div class="icon-star text-dark-1 text-10"></div>
-                                <div class="icon-star text-dark-1 text-10"></div>
-                                <div class="icon-star text-dark-1 text-10"></div>
+                                {% for i in "★★★★★" %}
+                                    <div class="icon-star text-dark-1 text-10"></div>
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
