Setup contact us page

--- a/templates/inc/footer.html
+++ b/templates/inc/footer.html
@@ -58,7 +58,7 @@
                         <div class="col-lg-4 col-sm-6">
                             <h5 class="text-16 fw-500 mb-30">Support</h5>
                             <div class="d-flex y-gap-5 flex-column">
-                                <a href="#">Contact</a>
+                                <a href="{% url 'base:contact' %}">Contact</a>
                                 <a href="#">Privacy Policy</a>
                                 <a href="#">Terms and Conditions</a>
                                 <a href="#">Sitemap</a>
