--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -32,7 +32,7 @@
                                         <a href="{% url 'base:rooms' %}">Rooms</a>
                                     </li>
                                     <li>
-                                        <a href="{% url 'base:home' %}">Contact Us</a>
+                                        <a href="{% url 'base:contact' %}">Contact Us</a>
                                     </li>
                                 </ul>
                             </div>
