--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,6 +8,116 @@
     <br>
     <br>
 
-    
+    <section data-anim="fade" class="d-flex items-center py-15 border-top-light">
+        <div class="container">
+            <div class="row y-gap-10 items-center justify-between">
+                <div class="col-auto">
+                    <div class="row x-gap-10 y-gap-5 items-center text-14 text-light-1">
+                        <div class="col-auto">
+                            <div class="">Africa</div>
+                        </div>
+                        <div class="col-auto">
+                            <div class="">></div>
+                        </div>
+                        <div class="col-auto">
+                            <div class="">Rwanda</div>
+                        </div>
+                        <div class="col-auto">
+                            <div class="">></div>
+                        </div>
+                        <div class="col-auto">
+                            <div class="text-dark-1">Kigali</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-auto">
+                    <a href="#" class="text-14 text-light-1">KK 35 Avenue, Kigali, Rwanda</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <div class="ratio ratio-16:9">
+        <div class="map-ratio">
+            <div class="map rounded-4 map-500">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.4162130891827!2d30.056825011912657!3d-1.988286936790796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x19dca5be108f7aa5%3A0x2abacadc67af2926!2sB%26B%20MOUNTAIN%20VIEW!5e0!3m2!1sen!2srw!4v1727166050562!5m2!1sen!2srw" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <section>
+        <div class="relative container">
+            <div class="row justify-end">
+                <div class="col-xl-5 col-lg-7">
+                    <div class="map-form px-40 pt-40 pb-50 lg:px-30 lg:py-30 md:px-24 md:py-24 bg-white rounded-4 shadow-4">
+                        <div class="text-22 fw-500">
+                            Send a message
+                        </div>
+                        <div class="row y-gap-20 pt-20">
+                            <div class="col-12">
+                                <div class="form-input ">
+                                    <input type="text" required>
+                                    <label class="lh-1 text-16 text-light-1">Full Name</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-input ">
+                                    <input type="text" required>
+                                    <label class="lh-1 text-16 text-light-1">Email</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-input ">
+                                    <input type="text" required>
+                                    <label class="lh-1 text-16 text-light-1">Subject</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-input ">
+                                    <textarea required rows="4"></textarea>
+                                    <label class="lh-1 text-16 text-light-1">Your Messages</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <a href="#" class="button px-24 h-50 -dark-1 bg-blue-1 text-white">
+                                    Send a Messsage 
+                                    <div class="icon-arrow-top-right ml-15"></div>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="layout-pt-md layout-pb-lg">
+        <div class="container">
+            <div class="row x-gap-80 y-gap-20 justify-between">
+                <div class="col-12">
+                    <div class="text-30 sm:text-24 fw-600">Contact Us</div>
+                </div>
+                <div class="col-lg-3">
+                    <div class="text-14 text-light-1">Address</div>
+                    <div class="text-18 fw-500 mt-10">KK 35 Avenue, Kigali, Rwanda</div>
+                </div>
+                <div class="col-auto">
+                    <div class="text-14 text-light-1">Toll Free Customer Care</div>
+                    <div class="text-18 fw-500 mt-10">+(1) 123 456 7890</div>
+                </div>
+                <div class="col-auto">
+                    <div class="text-14 text-light-1">Need live support?</div>
+                    <div class="text-18 fw-500 mt-10">hi@gotrip.com</div>
+                </div>
+                <div class="col-auto">
+                    <div class="text-14 text-light-1">Follow us on social media</div>
+                    <div class="d-flex x-gap-20 items-center mt-10">
+                        <a href="https://m.facebook.com/61559799568040" target="_blank"><i class="icon-facebook text-14"></i></a>
+                        <a href="https://x.com/bnbmountainview/" target="_blank"><i class="icon-twitter text-14"></i></a>
+                        <a href="https://www.instagram.com/bnbmountainview/" target="_blank"><i class="icon-instagram text-14"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
