--- a/templates/contact.html
+++ b/templates/contact.html
@@ -59,7 +59,7 @@
                                 <div class="col-12">
                                     <div class="form-input ">
                                         <input type="text" required>
-                                        <label class="lh-1 text-16 text-light-1">Full Name</label>
+                                        <label class="lh-1 text-16 text-light-1">Name</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
